# megan_aggregators

./: .gitignore  DEVELOP.rst  HISTORY.rst  README.rst  pyproject.toml
megan_aggregators/: __init__.py  cli.py  data.py  models.py  torch.py  util.py  utils.py
megan_aggregators/assets/: process.py
megan_aggregators/examples/: 00_quickstart.py  00_using_model.py  01_explaining_predictions.py  01_using_model.py  02_explaining_predictions.py  02_using_ensemble.py  03_generate_counterfactuals.py
megan_aggregators/experiments/: README.rst  concept_extraction.py  concept_extraction__aggregators_combined.py  concept_extraction__antibiotics.py  evaluate_megan_ensemble.py  evaluate_megan_ensemble__aggregators_lee.py  generate_chunked_dataset.py  generate_counterfactuals.py  generate_counterfactuals__aspirin.py  generate_counterfactuals__clioquinol.py  generate_counterfactuals__dimethylaminophenol.py  generate_counterfactuals_aspirin.py  generate_counterfactuals_phenylbutylamine.py  generate_disk_cache.py  generate_disk_cache__aggregators_binary_protonated.py  generate_visual_graph_dataset.py  predict_dataset.py  predict_elements.py  predict_elements__external.py  predict_elements__figure_3.py  predict_elements__figure_4.py  predict_elements__figure_5.py  predict_elements__test.py  protonate_dataset_csv.py  render_smiles.py  train_consensus_megan.py  train_megan.py  train_megan_chunked.py  train_megan_chunked__aggregators_binary.py  train_megan_with_explanation_features.py  vgd_torch_chunked_megan.py  vgd_torch_chunked_megan__aggregators_binary.py  yang_baseline.py
megan_aggregators/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
tests/: test_readme.py  test_torch.py  test_util.py  test_utils.py  util.py
(+46 files in other folders)
