[build-system]
requires = ["poetry-core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "megan_aggregators"
version = "0.1.0"
description = "Insert Description"
license = "MIT license"
authors = ["Jonas Teufel <jonseb1998@gmail.com>"]
maintainers = ["Jonas Teufel <jonseb1998@gmail.com>"]
readme = "README.rst"
keywords = []
packages = [
    { include = "megan_aggregators" },
    { include = "megan_aggregators/experiments"},
]
include = [
    "megan_aggregators/VERSION",
]

[tool.poetry.scripts]
megan_aggregators = 'megan_aggregators.cli:cli'

[tool.poetry.dependencies]
# general dependencies
python = ">=3.8.0,<4.0"
click = ">=7.1.2"
jinja2 = ">=3.0.3"
matplotlib = ">=3.5.3"
numpy = ">=1.23.2,<2.0"
python-decouple = ">=3.6"
# computational experiment framework
pycomex = ">=0.13.2"
# visual graph dataset format
visual-graph-datasets = ">=0.15.7"
# the MEGAN model implementation
graph-attention-student = ">=0.18.4"
# PDF report generation
weasyprint = "==61.1"
# CATs descriptors for yang baseline
#cats-descriptors = { git = "https://github.com/alexarnimueller/cats-descriptor", branch = "master", subdirectory = "./" }

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"
poetry-bumpversion = ">=0.3.0"

[tool.poetry_bumpversion.file."megan_aggregators/VERSION"]
search = "{current_version}"
replace = "{new_version}"

[tool.poetry_bumpversion.file."README.rst"]
search = 'version-{current_version}-orange.svg'
replace = 'version-{new_version}-orange.svg'

[tool.poetry_bumpversion.file."megan_aggregators/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'